--- a/package.json
+++ b/package.json
@@ -11,14 +11,20 @@
     "react-native": "0.58.1"
   },
   "devDependencies": {
+    "@types/jest": "^23.3.13",
     "@types/react": "^16.7.20",
     "@types/react-native": "^0.57.32",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "24.0.0",
     "jest": "24.0.0",
     "metro-react-native-babel-preset": "0.51.1",
+    "prettier": "^1.16.1",
     "react-native-typescript-transformer": "^1.2.11",
     "react-test-renderer": "16.6.3",
+    "ts-jest": "^23.10.5",
+    "tslint": "^5.12.1",
+    "tslint-config-airbnb": "^5.11.1",
+    "tslint-config-prettier": "^1.17.0",
     "typescript": "^3.2.4"
   },
   "jest": {
