--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "@types/jest": "^23.3.13",
     "@types/react": "^16.7.20",
     "@types/react-native": "^0.57.32",
+    "@types/react-native-sqlite-storage": "^3.3.1",
+    "@types/react-test-renderer": "^16.0.3",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "23.6.0",
     "jest": "23.6.0",
     "metro-react-native-babel-preset": "0.51.1",
     "prettier": "^1.16.1",
     "react-native-typescript-transformer": "^1.2.11",
-    "react-test-renderer": "16.6.3",
+    "react-test-renderer": "^16.7.0",
     "sequelize-cli": "^5.4.0",
     "ts-jest": "^23.10.5",
     "tslint": "^5.12.1",
