--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "16.7.0",
     "react-native": "0.58.1",
+    "react-native-fs": "^2.13.3",
     "react-native-sqlite-storage": "3.3.9",
     "sequelize": "^4.42.0"
   },
@@ -21,6 +22,7 @@
     "@types/react-native": "^0.57.32",
     "@types/react-native-sqlite-storage": "^3.3.1",
     "@types/react-test-renderer": "^16.0.3",
+    "@types/sequelize": "^4.27.34",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "23.6.0",
     "jest": "23.6.0",
@@ -29,6 +31,7 @@
     "react-native-typescript-transformer": "^1.2.11",
     "react-test-renderer": "^16.7.0",
     "sequelize-cli": "^5.4.0",
+    "sequelize-typescript": "^0.6.7",
     "ts-jest": "^23.10.5",
     "tslint": "^5.12.1",
     "tslint-config-airbnb": "^5.11.1",
